fix problem on mobile display with logo

--- a/client/src/components/layout/Navbar/Navbar.module.scss
+++ b/client/src/components/layout/Navbar/Navbar.module.scss
@@ -9,6 +9,8 @@
   margin: 0;
 }
 
+
+
 .logo_div {
   position: relative;
   z-index: 1;
@@ -25,6 +27,12 @@
   z-index: 5;
   border-top: 5px solid $color-red;
   border-left: 5px solid $color-red;
+
+  @media (max-width: 600px) {
+    left: -10px;
+
+}
+
 }
 
 .logo_div::after {
@@ -38,6 +46,12 @@
   z-index: 5;
   border-right: 5px solid $color-black;
   border-bottom: 5px solid $color-black;
+
+  @media (max-width: 600px) {
+    right: -10px;
+
+}
+
 }
 
 .logo_div button {
